--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="shortcut icon"
+      href="//cdn.shopify.com/s/files/1/0287/1620/4135/files/Logo_1024_x_1024_96x.png?v=1596200061"
+      type="image/png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +28,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Redux App</title>
+    <title>
+      Rujani Tea | Buy The Best Quality Assam Tea Online – Rujani Tea India
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
